Reduction_part1_nearlydone_student.ipynb

--- a/reduction_part1_student.ipynb
+++ b/reduction_part1_student.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "\n",
     "# this is a list of all the bias image names\n",
     "#********************\n",
-    "biaslist = np.array([\"im1.fits\",\"im2.fits\",etc])"
+    "biaslist = np.array([\"b000.fits\",\"b001.fits\",\"b002.fits\",\"b003.fits\",\"b004.fits\",\"b005.fits\",\"b006.fits\",\"b007.fits\",\"b008.fits\",\"b009.fits\",\"b010.fits\",\"b011.fits\",\"b012.fits\",\"b013.fits\",\"b014.fits\",\"b015.fits\",\"b016.fits\",\"b017.fits\",\"b018.fits\",\"b019.fits\",\"b020.fits\",\"b021.fits\"])"
    ]
   },
   {
@@ -63,13 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this is a list of all the flatfield images.  There may need to be more than one list\n",
     "#*************\n",
-    "flatlist_<filt> = np.array([\"im1.fits\", \"im2.fits\", etc])"
+    "flatlist_V= np.array([\"f023.fits\",\"f024.fits\",\"f025.fits\",\"f026.fits\",\"f027.fits\",\"f028.fits\"])\n",
+    "flatlist_B= np.array([\"f029.fits\",\"f030.fits\",\"f031.fits\",\"f032.fits\",\"f033.fits\"])"
    ]
   },
   {
@@ -81,13 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this is a list of all the science images.  There may need to be more than one list\n",
     "#*************\n",
-    "sciencelist_<filtnam>_<clustername> = np.array([\"im1.fits\", \"im2.fits\", etc])"
+    "sciencelist_V_NGC7128 = np.array([\"s045.fits\",\"s046.fits\",\"s047.fits\",\"s048.fits\",\"s049.fits\",\"s050.fits\",\"s051.fits\",\"s052.fits\",\"s061.fits\",\"s062.fits\",\"s063.fits\"])\n",
+    "sciencelist_B_NGC7128 = np.array([\"s053.fits\",\"s054.fits\",\"s055.fits\",\"s056.fits\",\"s057.fits\",\"s058.fits\",\"s059.fits\",\"s060.fits\",\"s064.fits\",\"s065.fits\",\"s066.fits\"])\n",
+    "sciencelist_V_King20 = np.array([\"s085.fits\",\"s086.fits\",\"s087.fits\",\"s088.fits\",\"s089.fits\",\"s090.fits\",\"s091.fits\",\"s092.fits\",\"s101.fits\",\"s102.fits\",\"s103.fits\"])\n",
+    "sciencelist_B_King20 = np.array([\"s093.fits\",\"s094.fits\",\"s095.fits\",\"s096.fits\",\"s097.fits\",\"s098.fits\",\"s099.fits\",\"s100.fits\",\"s104.fits\",\"s105.fits\",\"s106.fits\"])\n"
    ]
   },
   {
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,19 +155,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biaslist_good =  ['b000.fits' 'b001.fits' 'b002.fits' 'b003.fits' 'b004.fits' 'b005.fits'\n",
+      " 'b006.fits' 'b007.fits' 'b008.fits' 'b009.fits' 'b010.fits' 'b011.fits'\n",
+      " 'b012.fits' 'b013.fits' 'b014.fits' 'b015.fits' 'b016.fits' 'b017.fits'\n",
+      " 'b018.fits' 'b019.fits' 'b020.fits' 'b021.fits']\n",
+      "twilight_flatlist_good =  ['b000.fits' 'b001.fits' 'b002.fits' 'b003.fits' 'b004.fits' 'b005.fits'\n",
+      " 'b006.fits' 'b007.fits' 'b008.fits' 'b009.fits' 'b010.fits' 'b011.fits'\n",
+      " 'b012.fits' 'b013.fits' 'b014.fits' 'b015.fits' 'b016.fits' 'b017.fits'\n",
+      " 'b018.fits' 'b019.fits' 'b020.fits' 'b021.fits']\n",
+      "science_flatlist_good =  ['b000.fits' 'b001.fits' 'b002.fits' 'b003.fits' 'b004.fits' 'b005.fits'\n",
+      " 'b006.fits' 'b007.fits' 'b008.fits' 'b009.fits' 'b010.fits' 'b011.fits'\n",
+      " 'b012.fits' 'b013.fits' 'b014.fits' 'b015.fits' 'b016.fits' 'b017.fits'\n",
+      " 'b018.fits' 'b019.fits' 'b020.fits' 'b021.fits']\n",
+      "bad_images =  []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/e200o154/.conda/envs/python3nv/lib/python3.7/site-packages/ipykernel_launcher.py:14: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "#a list of bad images\n",
     "#*************\n",
-    "badlist = np.array([\"bad1.fits\",\"bad2.fits\"])\n",
+    "badlist = np.array([])\n",
     "\n",
     "#make a cleaned version of the biaslist\n",
     "biaslist_good = imlist_clean(biaslist,badlist)\n",
     "print(\"biaslist_good = \",biaslist_good)\n",
     "\n",
-    "#Now repeat this block of code for the twilight flats and the science flats in each band\n"
+    "#Now repeat this block of code for the twilight flats and the science flats in each band\n",
+    "twiflatlist_good = imlist_clean(biaslist,badlist)\n",
+    "print(\"twilight_flatlist_good = \",biaslist_good)\n",
+    "sciflatlist_good = imlist_clean(biaslist,badlist)\n",
+    "print(\"science_flatlist_good = \",biaslist_good)\n",
+    "print(\"bad_images = \",badlist)"
    ]
   },
   {
@@ -187,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +241,8 @@
     "\n",
     "    #*************\n",
     "    #Look in the telescope manual on google drive for the gain and readnoise values\n",
-    "    g =  #gain in units of electrons/ADU\n",
-    "    rn =  #readnoise in electrons\n",
+    "    g = 2.13 #gain in units of electrons/ADU\n",
+    "    rn = 3.85 #readnoise in electrons\n",
     "\n",
     "    #loop over every image name in the bias list\n",
     "    for imname in biaslist_good:\n",
@@ -213,7 +250,7 @@
     "        #create the image name, including the path\n",
     "        imstr = rawpath + imname\n",
     "        #read that into a CCDData object.  This allows you to specify a unit\n",
-    "        im = CCDData.read(imstr,unit = \"adu\")\n",
+    "        im = CCDData(imstr,unit = u.adu)\n",
     "\n",
     "        #in computing the noise you need to convert the image from ADU into electrons\n",
     "        #the uncertainty of a pixel is u=sqrt(g*p + sigma_RN**2), where g is the gain\n",
@@ -230,7 +267,7 @@
     "        #of one term (constant) and see how well it does\n",
     "        #**********\n",
     "        poly_model = models.Polynomial1D(1)\n",
-    "        oscan_sub_im = ccdproc.subtract_overscan(gain_corr_im,overscan = gain_corr_im[****], \\\n",
+    "        oscan_sub_im = ccdproc.subtract_overscan(gain_corr_im,overscan = gain_corr_im[0], \\\n",
     "                                                 overscan_axis=1,model=poly_model)\n",
     "    \n",
     "        #make a plot of the median of each row of the now-subtracted overscan columns\n",
@@ -242,16 +279,16 @@
     "        #now go through every row, take the median, and put it into the check array\n",
     "        #**********\n",
     "        for i in range(len(np.asarray(oscan_sub_im[:]))): \n",
-    "            oscan_check[i] = np.median(dat[i,*****])\n",
+    "            oscan_check[i] = np.median(dat[:,2048:])\n",
     "            \n",
     "        #make a plot of the median vs the row number\n",
     "        #**********\n",
-    "        plt.plot(********,*******,'bo')\n",
+    "        plt.plot(1000,1000,'bo')\n",
     "        plt.show()\n",
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim(oscan_sub_im[******])\n",
+    "        trimmed_im = ccdproc.trim(oscan_sub_im[:,:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -261,15 +298,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "ufunc 'multiply' did not contain a loop with signature matching types dtype('<U62') dtype('<U62') dtype('<U62')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-88b08e893a37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mredpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"~/RFSLAB/USER_DPT/< KUID>/ASTR596/Data/Reduced/20191105/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0moscan_subtract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbiaslist_good\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mredpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrawpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-33-405f9e28e76e>\u001b[0m in \u001b[0;36moscan_subtract\u001b[0;34m(imlist, redpath, rawpath)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;31m#the u.<blah> is a python way of specifying unit that goes along with the number\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mim_with_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mccdproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_deviation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mg\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melectron\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadnoise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5.0\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melectron\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;31m#gain correct the images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/python3nv/lib/python3.7/site-packages/ccdproc/log_meta.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwd)\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0;31m# Grab the logging keyword, if it is present.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m         \u001b[0mlog_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_LOG_ARGUMENT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlog_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/python3nv/lib/python3.7/site-packages/ccdproc/core.py\u001b[0m in \u001b[0;36mcreate_deviation\u001b[0;34m(ccd_data, gain, readnoise, disregard_nan)\u001b[0m\n\u001b[1;32m    337\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    338\u001b[0m     \u001b[0;31m# remove values that might be negative or treat as nan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 339\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgain_value\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mccd_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    340\u001b[0m     \u001b[0mmask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdisregard_nan\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: ufunc 'multiply' did not contain a loop with signature matching types dtype('<U62') dtype('<U62') dtype('<U62')"
+     ]
+    }
+   ],
    "source": [
     "#perform overscan subtraction on the bias frames\n",
     "#the reduction path\n",
     "#****** This should be the absolute path to your files\n",
-    "rawpath = \n",
-    "redpath = \n",
+    "rawpath = \"~/RFSLAB/USER_DPT/e200o154/ASTR596/Data/Raw/20191105/\"\n",
+    "redpath = \"~/RFSLAB/USER_DPT/< KUID>/ASTR596/Data/Reduced/20191105/\"\n",
     "\n",
     "oscan_subtract(biaslist_good, redpath, rawpath)"
    ]
@@ -280,6 +332,13 @@
    "source": [
     "When you have run your code with no bugs, you should check that 1) the plots look like you've done the correct overscan subtraction, 2) you have the right polynomial order, 3) by checking in ds9 that you have trimmed the images correctly.  Step #3 likely only needs to be done for a couple of images."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
